--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@firebase/auth": "^0.21.4",
     "@nanostores/react": "^0.4.1",
+    "ckeditor4-react": "^4.1.2",
     "firebase": "^9.17.2",
+    "firebase-tools": "^11.24.1",
     "nanostores": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
